--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "caRamel"]
+	path = caRamel
+	url = https://github.com/fzao/caramel
+	shallow = true
+	registered = true
